# phm

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
docs/: API_GUIDE.md  DATASETS.md  EXPERIMENTS.md  TESTING.md  USER_GUIDE.md
docx/: OPENING_REPORT.md  SDD.md  SRS.md  UML.md
docx/mid-term/: 工业轴承故障预测系统的实现-中期汇报-周逸进.pptx
docx/mid-term/md/: 02_中期检查报告.md  06_设计文档.md  07_单元测试计划文档.md  08_集成测试计划文档.md  11_编码规范文档.md
docx/proposal/: 工业轴承故障预测系统的实现-开题ppt-周逸进.pptx
docx/proposal/md/: 01_开题报告.md  03_技术预研报告.md  04_需求定义文档.md  05_SRS规格说明文档.md  09_确认测试计划文档.md  10_项目管理计划文档.md
scripts/: export_course_docs.sh  generate_midterm_ppt.py
src/USTC/: __init__.py
src/USTC/SSE/: __init__.py
src/USTC/SSE/BearingPrediction/: __init__.py  api.py  config.py  main.py
src/USTC/SSE/BearingPrediction/common/: __init__.py  registry.py  serialization.py
src/USTC/SSE/BearingPrediction/data/: __init__.py  entities.py
src/USTC/SSE/BearingPrediction/dataset/: __init__.py  base.py  loader.py  phm2012.py  xjtu.py
src/USTC/SSE/BearingPrediction/evaluation/: __init__.py  evaluator.py  metrics.py
src/USTC/SSE/BearingPrediction/feature/: __init__.py  engineering.py  extractor.py
src/USTC/SSE/BearingPrediction/labeling/: __init__.py  labelers.py
src/USTC/SSE/BearingPrediction/model/: __init__.py  rul_model.py
src/USTC/SSE/BearingPrediction/models/: __init__.py  base.py  cnn.py  mlp.py  rnn.py  transformer.py
tests/: test_data_io_and_loaders.py  test_prediction_modes.py  test_stage_and_visualization.py  test_training_pipeline.py
(+16 files in other folders)
